--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <!--activity android:name=".ExercisePage" /-->
         <activity android:name=".HistoryPage" />
         <activity android:name=".HistoryList" />
+        <activity android:name=".VideoAllList" />
     </application>
 
 </manifest>
