--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.kenneth.hiit">
 
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -10,7 +11,8 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".Global"
         android:allowBackup="true"
@@ -37,9 +39,10 @@
             android:name=".frdActivity"
             android:label="@string/title_activity_frd"
             android:theme="@style/AppTheme" />
-        <!--activity android:name=".ExercisePage" /-->
+        <!-- activity android:name=".ExercisePage" / -->
         <activity android:name=".HistoryPage" />
         <activity android:name=".HistoryList" />
+        <activity android:name=".PartyActivity"></activity>
     </application>
 
 </manifest>
