--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -28,4 +28,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     wearApp project(':wear')
     implementation 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+}
+repositories {
+    maven { url "https://jitpack.io" }
 }
