--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -30,10 +30,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wearable:+'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.android.support:support-v4:27.1.0'
-    compile 'com.android.support:support-v13:27.1.0'
-    compile 'com.android.support:cardview-v7:27.1.0'
-    compile 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:support-v13:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
 }
 repositories {
     maven { url "https://jitpack.io" }
