--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:name=".Global"
@@ -23,7 +23,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StartActivity"
+        <activity
+            android:name=".StartActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".LoginActivity"
             android:theme="@style/AppTheme" />
         <activity android:name=".IndexActivity" />
         <activity
@@ -52,9 +54,17 @@
         <activity android:name=".TotalTime" />
         <activity android:name=".HeartRate" />
         <activity android:name=".CaloriesBurn" />
-        <activity android:name=".PartyActivity"></activity>
-
-        <activity android:name=".CreatePartyActivity"></activity>
+        <activity android:name=".PartyActivity" />
+        <activity android:name=".CreatePartyActivity" />
+        <activity
+            android:name=".ChatActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity
+            android:name=".chattingActivity"
+            android:label="@string/title_activity_chatting"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan">
+    </activity>
     </application>
 
 </manifest>
