--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     wearApp project(':wear')
     implementation 'com.google.android.gms:play-services-wearable:+'
-    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:support-v4:27.1.0'
     implementation 'com.android.support:support-v13:27.1.0'
     implementation 'com.android.support:cardview-v7:27.1.0'
