--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -58,14 +58,15 @@
         <activity android:name=".CreatePartyActivity" />
         <activity
             android:name=".ChatActivity"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".CameraActivity"></activity>
-        <!--<activity-->
-            <!--android:name=".chattingActivity"-->
-            <!--android:label="@string/title_activity_chatting"-->
-            <!--android:theme="@style/AppTheme"-->
-            <!--android:windowSoftInputMode="adjustPan">-->
-    <!--</activity>-->
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".CameraActivity" />
+        <!-- <activity -->
+        <!-- android:name=".chattingActivity" -->
+        <!-- android:label="@string/title_activity_chatting" -->
+        <!-- android:theme="@style/AppTheme" -->
+        <!-- android:windowSoftInputMode="adjustPan"> -->
+        <!-- </activity> -->
+        <activity android:name=".JoinPtyActivity"></activity>
     </application>
 
 </manifest>
