--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+
             android:name=".StartActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -69,7 +70,9 @@
         <activity android:name=".JoinPtyActivity" />
         <activity android:name=".PartyVideoView" />
         <activity android:name=".testvideo" />
-        <activity android:name=".GameActivity" />
+        <activity android:name=".GameActivity"
+            android:configChanges="orientation|keyboardHidden"
+            />
         <activity android:name=".partyVdoActivity"></activity>
     </application>
 
